--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "portfolio",
   "version": "1.0.0",
   "description": "Miniport by HTML5 UP\r html5up.net | @ajlkn\r Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)",
-  "main": "gulpfile.js",
+  "main": "index.js",
   "dependencies": {
-    "browser-sync": "^2.26.7",
-    "gulp": "^4.0.2",
-    "gulp-sass": "^4.0.2",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "browser-sync": "^2.26.7",
+    "gulp": "^4.0.2",
+    "gulp-sass": "^4.0.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack --watch --mode=development"
